# otus.homework.2

./: CMakeLists.txt  README.md  main.cxx
.github/workflows/: release.yml
